# gomoku_narabe

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: gomoku.h  main.cpp
src/player/: player.h  player_creator.h
src/player/random/: random_player.h
